k8s/jackett/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jackett
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: jackett
          image: ghcr.io/linuxserver/jackett:version-v0.17.855@sha256:193fbb4143665ccf4fbfae42269d9cc66123b9185a7c04a1ee6c0f301de5b77a
          ports:
            - name: jackett
              containerPort: 9117
          volumeMounts:
            - name: server
              mountPath: /config
              subPath: jackett
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
