k8s/jackett/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jackett
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("jackett.mchill.duckdns.org")
      kind: Rule
      services:
        - name: jackett
          port: 9117
